# mpq_config

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
src/: meson.build  mpq_config.h  mpq_decoders.c  mpq_dump.c  mpq_i2c.c  mpq_main.c  mpq_regs.c  mpq_subcmd.c
test/: README.md  _board.py  conftest.py  pytest.ini  test_decoders.py  test_explain_golden.py  test_factory.py  test_formats.py  test_health.py  test_health_negative.py  test_help.py  test_target_kernel.py  test_target_tool.py
test-data/: factory.txt  u2200-faulted.dmp  u2200-live.csv  u2200-live.dmp  u2200-live.explain.golden.txt  u2200-live.mps.txt
tools/: show_config.py
